--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,22 @@
 body{
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: 'Helvetica';
   font-size: 14px;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../fonts/Helvetica.ttc');
+}
+
+@font-face {
+  font-family: 'Caviar Dreams';
+  src: url('../fonts/CaviarDreams.ttf');
+}
+
+.container{
+  margin: 0 auto;
+  width: 1024px;
+  display: flex;
 }
