--- a/styles/main.css
+++ b/styles/main.css
@@ -20,3 +20,125 @@ body{
   width: 1024px;
   display: flex;
 }
+
+
+/*FORMULAIRE BOOK*/
+/*formulaire*/
+
+/*first Flexbox*/
+firstFlexbox input{
+  width:300px;
+}
+section.formulaire{
+  width:400px;
+  height:500px;
+  margin:0 auto;
+  align-items: center;
+  color:black;
+}
+
+section.item{
+  display:flex;
+  margin:10px;
+  margin-top: 20px;
+}
+
+label{
+  width:160px;
+  margin-right : 10px;
+}
+
+.book{
+  display:flex;
+  flex-direction:column;
+}
+
+
+.choice{
+justify-content: space-between;
+}
+
+.resto input{
+  margin:10px;
+}
+.round{
+  position : relative;
+}
+.round label{
+  background-color: white;
+  border: 1px solid #707070;
+  border-radius:50%;
+  position:absolute;
+  height:15px;
+  left:0;
+  top:0;
+  width:15px;
+}
+
+.round label:after{
+  border:2px solid #707070;
+  border-top:none;
+  border-right:none;
+  content:"";
+  height:4px;
+  left:5px;
+  opacity:0;
+  position:absolute;
+  top:6px;
+  tansform:rotate(-45deg);
+  width:10px;
+}
+
+.round input[type="checkbox"]{
+  visibility:hidden;
+}
+
+.round input[type="checkbox"]:checked+label{
+  background-color:#66bb6a;
+  border-color:#66bb6a;
+}
+
+.round input[type="checkbox"]::checked+label:after{
+  opacity:1;
+}
+/*Fourth Flexbox*/
+
+.fourthFlexbox{
+  display:flex;
+}
+.message{
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+}
+
+.message{
+  display:flex;
+
+}
+.writeHere{
+  width:400px;
+}
+/* Couleurs etc*/
+select.container{
+  width:200;
+  height: 15px;
+  background:#F2F2F2;
+}
+input{
+  border-color: #707070;
+  border-width: thin;
+  height: 12px;
+}
+
+section.background{
+  width:460px;
+  background-color: #f2f2f2;
+  border-radius: 1%;
+}
+body{
+  background-image: url(../images/landscape.png);
+  font-family: "Avenir", sans-serif;
+  font-size: 12px;
+}
+/*FIN FORMULAIRE BOOK*/
