--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ body{
   font-family: "Avenir", sans-serif;
   font-size: 12px;
 }
-select.container{
+select.formContainer{
   width:200;
   height: 15px;
   background:#F2F2F2;
@@ -69,7 +69,7 @@ label{
 
 /*first Flexbox*/
 firstFlexbox input{
-  width:300px;
+  width:200px;
 }
 
 /*third flexbox*/
@@ -86,14 +86,22 @@ firstFlexbox input{
 justify-content: space-between;
 }
 
+.restoChoice{
+  display:flex;
+}
+
+.secondChoices{
+  display: flex;
+}
+
 /* Customize the label (the container) */
 .choiceContainer {
   display: flex;
   position: relative;
-  padding-left: 35px;
+  padding-left: 17px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 10px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -114,8 +122,8 @@ justify-content: space-between;
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 13px;
+  width: 13px;
   background-color: white;
   border-color:#707070;
 }
@@ -127,7 +135,7 @@ justify-content: space-between;
 
 /* When the checkbox is checked, add a blue background */
 .choiceContainer input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: #FF9300;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -144,12 +152,12 @@ justify-content: space-between;
 
 /* Style the checkmark/indicator */
 .choiceContainer .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
+  left: 4.5px;
+  top: 1px;
+  width: 3px;
+  height: 8px;
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -158,6 +166,7 @@ justify-content: space-between;
 
 .fourthFlexbox{
   display:flex;
+  margin-bottom: 10px;
 }
 .message{
   display:flex;
@@ -173,4 +182,11 @@ justify-content: space-between;
   width:400px;
 }
 
+
+/*Réserver*/
+.booking{
+  display: flex;
+  justify-content: center;
+  margin-right: 50px;
+}
 /*FIN FORMULAIRE BOOK*/
