--- a/styles/template.css
+++ b/styles/template.css
@@ -1,11 +1,25 @@
 .presentation{
-    width: 80%;
-    height: ;
+    width: 100%;
+    height: 100%;
     justify-content: center;
-    background-color: #F2F2F2
+    background-color: #F2F2F2;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.slider{
+    width: 65%;
+    height: 50%;
 }
 
 .slider img{
     height: 100%;
     width: 100%;
+}
+
+.fiches{
+    width: 20%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    justify-content: center;
 }
