--- a/styles/book.css
+++ b/styles/book.css
@@ -5,56 +5,76 @@ body{
   color:black;
   background-color:white;
   background-image:url(../images/hall/hallDAaccueil.jpg);
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position:50% 50%;
+  background-size: auto;
   font-family: "Avenir", sans-serif;
-  font-size: 1.6rem;
+  font-size: 0.8rem;
   font-weight: 500;
+  overflow: hidden;
 }
 .column{
   display:flex;
   flex-direction: column;
 }
 
-.container{
+.Container{
   display:flex;
   justify-content: center;
 
 }
+
 
 /*text*/
 
 .blocOne{
   flex-direction: column;
   margin-left: 20px;
+  width: 200px;
+  margin-bottom: 300px;
 }
 
 .arrow{
-  height:100px;
-  width:50px;
+  width:200px;
+  height:auto;
   color: white;
 }
+
+.arrow img{
+  margin-left:550px;
+  margin-bottom:-100px;
+}
+
 
 .text{
   flex-direction: column;
   color: white;
+  margin-left: 20px;
 }
 
 .title{
-  margin-left: 20px;
+  margin-left: 10px;
+  font-size: 1.3rem;
+  width: 400px;
 }
 .textTitle{
-  font-family: 'CaviarDreams'
+  font-family: 'CaviarDreams';
+  margin-top: 20px;
 }
 
 .smallText{
   font-size: 0.8rem;
   font-weight: lighter;
+  width: 400px;
 }
+
 .orange{
   background-color: #FF9300;
   width:2px;
   height:30px;
   margin:10px;
-  margin-top: 20px;
+  margin-top: 24px;
 }
 
 /*formulaire*/
@@ -62,6 +82,7 @@ body{
 .blocTwo{
   flex-direction: column;
   justify-content: center;
+  width:300px;
 }
 
 select#subject{
@@ -75,23 +96,19 @@ select#subject{
   border-radius: 5px;
   height: 18px;
   width:200px;
-  margin-left: 50px;
 }
 
 section.background{
-  width:600px;
+  margin-top:30px;
+  width:500px;
+  height:600px;
   background-color: #f2f2f2;
   border-radius: 2%;
   display:flex;
   flex-direction: column;
 }
 
-section.formulaire{
-  height:500px;
-  margin:0 auto;
-  align-items: center;
-  color:black;
-}
+
 
 #subject{
   margin-left:50px;
@@ -99,10 +116,10 @@ section.formulaire{
   background-color: white;
   border: solid #707070 thin;
 }
+
 section.item{
   display:flex;
   margin:10px;
-  margin-top: 20px;
 }
 
 label{
@@ -112,7 +129,6 @@ label{
 /*first Flexbox*/
 section.firstFlexobx{
   padding-top: 15px;
-  padding-left: 70px;
 }
 .firstFlexbox input{
   width:200px;
@@ -121,13 +137,12 @@ section.firstFlexobx{
 /*second Flexbox*/
 section.secondFlexbox{
   padding-top: 15px;
-  padding-left: 70px;
 }
 
 /*third flexbox*/
 section.thirdFlexbox{
   padding-top: 15px;
-  padding-left: 70px;}
+}
 
 
 .book{
@@ -141,6 +156,7 @@ section.thirdFlexbox{
 
 .choice{
 justify-content: space-between;
+margin-top:7px;
 }
 
 .restoChoice{
@@ -158,7 +174,8 @@ justify-content: space-between;
   padding-left: 17px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 10px;
+  font-size: 0.5rem;
+  color: #707070;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -222,15 +239,10 @@ justify-content: space-between;
 /*Fourth Flexbox*/
 section.fourthFlexbox{
   padding-top: 15px;
-  padding-left: 70px;
   display:flex;
   margin-bottom: 30px;
 }
 
-
-.fourthFlexbox{
-
-}
 .message{
   display:flex;
   flex-direction:column;
@@ -241,7 +253,7 @@ section.fourthFlexbox{
   justify-content: center;
 }
 .writeHere{
-  width:450px;
+  width:350px;
 }
 
 
@@ -259,8 +271,6 @@ section.fourthFlexbox{
   padding: 5px;
   width:150px;
   height: 200px:
-
-
 }
 
 @media screen (min-width:960) and (max-width:1280px){
