--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -46,7 +46,6 @@ body{
   margin-bottom:-100px;
 }
 
-
 .text{
   flex-direction: column;
   color: white;
@@ -84,6 +83,7 @@ body{
   flex-direction: column;
   justify-content: center;
   width:300px;
+  margin-top: 0px;
 }
 
 form.formContainer{
@@ -108,9 +108,8 @@ input{
 }
 
 section.background{
-  margin-top:30px;
   width:500px;
-  height:600px;
+  height:400px;
   background-color: #f2f2f2;
   border-radius: 5%;
   display:flex;
@@ -119,9 +118,10 @@ section.background{
 }
 
 
-section.item{
+.item{
   display:flex;
   margin:10px;
+  margin-bottom: 10px;
   width:500px;
 }
 
@@ -139,103 +139,6 @@ section.secondFlexbox{
   padding-top: 15px;
 }
 
-/*third flexbox*/
-section.thirdFlexbox{
-  padding-top: 30px;
-}
-
-
-.book{
-  display:flex;
-  flex-direction:column;
-}
-
-.resto input{
-  margin:10px;
-}
-
-.choice{
-justify-content: space-between;
-margin-top:7px;
-}
-
-.restoChoice{
-  display:flex;
-}
-
-.secondChoices{
-  display: flex;
-}
-
-/* Customize the label (the container) */
-.choiceContainer {
-  display: flex;
-  position: relative;
-  padding-left: 17px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 0.5rem;
-  color: #707070;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.choiceContainer input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 13px;
-  width: 13px;
-  background-color: white;
-  border-color:#707070;
-}
-
-/* On mouse-over, add a grey background color */
-.choiceContainer:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.choiceContainer input:checked ~ .checkmark {
-  background-color: #FF9300;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.choiceContainer input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.choiceContainer .checkmark:after {
-  left: 4.5px;
-  top: 1px;
-  width: 3px;
-  height: 8px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
 /*Fourth Flexbox*/
 section.fourthFlexbox{
   padding-top: 15px;
