--- a/nav.css
+++ b/nav.css
@@ -4,21 +4,27 @@
     box-sizing: border-box;
 }
 
+/* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*//* Nav Bar*/
+
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: #848484;
-    font-family: 'Montserrat';
+    background-color: rgb(0, 0, 0, 0.9);
+    font-family: 'Helvetica';
     text-transform: uppercase;
     font-size: 19px;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
 }
 
 .logo{
-    color: rgba(255, 255, 255, 0.863);
+    color: rgba(255, 255, 255, 0.95);
     letter-spacing: 5px;
     font-size: 22;
+    text-decoration: none;
 }
 
 .nav-links{
@@ -30,11 +36,15 @@ nav{
     list-style: none;
 }
 .nav-links a{
-    color: rgba(255, 255, 255, 0.863);
+    color: rgba(255, 255, 255, 0.95);
     text-decoration: none;
     letter-spacing: 3px;
-    font-weight: bold;
     font-size: 14px;
+}
+
+.nav-links a:hover{
+    padding-bottom: 10px;
+    border-bottom: 2px solid #cf6f00;
 }
 
 .burger{
@@ -45,11 +55,17 @@ nav{
 .burger div{
     width: 25px;
     height: 3px;
-    background-color: rgba(255, 255, 255, 0.863);
+    background-color: rgba(255, 255, 255, 0.95);
     margin: 5px;transition: all 0.3s ease;
 }
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:1500px){
+    .nav-links{
+        width: 40%;
+    }
+}
+
+@media screen and (max-width:1050px){
     .nav-links{
         width: 60%;
     }
@@ -64,7 +80,7 @@ nav{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: #848484;
+        background-color: rgb(0, 0, 0, 0.9);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -104,3 +120,5 @@ nav{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 }
+
+/* Nav Bar END *//* Nav Bar END *//* Nav Bar END *//* Nav Bar END *//* Nav Bar END *//* Nav Bar END *//* Nav Bar END *//* Nav Bar END */
