Changed file location, added slider to template, change files names, change font files

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -7,12 +7,9 @@
 /* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider */
 
 .carousel-container{
-    width: 55%;
-    margin-left: 5%; /*POSITION X DU SLIDER*/
+    width: 100%;
     overflow: hidden;
     position: relative;
-    border: 2.5px solid black;
-    top: 120px; /*POSITION Y DU SLIDER*/
 }
 
 .carousel-slide{
@@ -35,7 +32,7 @@
     left: 5%;
     cursor: pointer;
     border: none;
-    background: url("images/left-arrow.svg") no-repeat left; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
+    background: url("icons/left-arrow.svg") no-repeat left; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
 }
 
 #nextBtn{
@@ -47,7 +44,7 @@
     right: 5%;
     cursor: pointer;
     border: none;
-    background: url("images/right-arrow.svg") no-repeat right; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
+    background: url("icons/right-arrow.svg") no-repeat right; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
 }
 
 @media screen and (max-width:1050px){
