--- a/styles/template.css
+++ b/styles/template.css
@@ -44,8 +44,24 @@ h2{
     justify-content: center;
 }
 
+.fiche h2{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.info{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .specs{
-    flex-wrap: nowrap;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: column row;
+}
+
+.TEST p{
+    margin-left: 20px;
 }
 
 .info p{
@@ -67,6 +83,7 @@ h2{
     justify-content: center;
     align-items: center;
     text-align: center;
+    border-color:#FF9300;
 }
 
 .button a{
@@ -99,6 +116,8 @@ h2{
   .presentation{
       width: 300px;
   }
+}
+
 
 @media screen and (max-width:768px)
 {
@@ -117,8 +136,9 @@ h2{
       width: 60%;
       height: 60%;
   }
-
+  
   .presentation{
       width: 300px;
+      height: 470px;
   }
 }
