--- a/styles/template.css
+++ b/styles/template.css
@@ -4,9 +4,10 @@
 
 h2{
     font-family: 'Caviar Dreams';
-    font-size: 35px;
+    font-size: 30px;
     text-align: center;
     color: #707070;
+    
   }
 
 .square{
@@ -62,6 +63,11 @@ h2{
 
 .objects p{
     margin-left: 20px;
+}
+
+.info{
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .info p{
