--- a/styles/template.css
+++ b/styles/template.css
@@ -7,7 +7,7 @@ h2{
     font-size: 30px;
     text-align: center;
     color: #707070;
-    
+
   }
 
 .square{
@@ -42,7 +42,7 @@ h2{
 .fiches{
     padding-top: 20px;
     padding-bottom: 20px;
-    justify-content: center;
+    align-items: center;
 }
 
 .fiche h2{
@@ -57,8 +57,8 @@ h2{
 
 .specs{
     display: flex;
-    justify-content: space-around;
     flex-flow: column row;
+    align-items: center;
 }
 
 .objects p{
@@ -90,6 +90,8 @@ h2{
     align-items: center;
     text-align: center;
     border-color:#FF9300;
+    display: flex;
+    margin-left: 30%;
 }
 
 .button a{
