--- a/styles/template.css
+++ b/styles/template.css
@@ -78,6 +78,7 @@ h2{
 .info ul{
     color: #707070;
     margin: 0 auto;
+    padding-left : 20px;
 }
 
 .button{
@@ -123,6 +124,7 @@ h2{
 
   .presentation{
       width: 300px;
+      height: 550px;
   }
 }
 
@@ -147,6 +149,6 @@ h2{
   
   .presentation{
       width: 300px;
-      height: 470px;
+      height: 550px;
   }
 }
