--- a/styles/book.css
+++ b/styles/book.css
@@ -7,12 +7,13 @@ body{
   background-image:url(../images/hall/hallDAaccueil.jpg);
   background-repeat: no-repeat;
   background-attachment:fixed;
-  background-position:50% 50%;
-  background-size: auto;
+  background-position:100%;
+  background-size: 100%;
   font-family: "Avenir", sans-serif;
-  font-size: 1rem;
+  font-size: 100%;
   font-weight: 500;
   width:100%;
+  height:100%;
 }
 
 .column{
@@ -31,45 +32,48 @@ body{
 
 .blocOne{
   flex-direction: column;
-  margin-left: 20px;
-  width: 200px;
-  margin-bottom: 300px;
+  margin-left: 2%;
+  width: 20%;
+  margin-bottom: 30%;
 }
 
 .arrow{
-  width:200px;
+  width:20%;
   height:auto;
   color: white;
 }
 
 .arrow img{
-  margin-left:600px;
-  margin-bottom:-100px;
+  margin-left:1500%;
+  margin-bottom: -250%;
 }
 
 
 .text{
   flex-direction: column;
   color: white;
-  margin-left: 20px;
+  margin-left: 10%;
 }
 
 .title{
-  margin-left: 10px;
-  font-size: 1.3rem;
-  width: 400px;
+  margin-left: 2%;
+  font-size: 150%;
+  width: 40%;
 }
+
 .textTitle{
   font-family: 'CaviarDreams';
-  margin-top: 20px;
+  margin-top:6%;
+  /*border-left-color: #FF9300;*/
 }
 
 .smallText{
-  font-size: 0.9rem;
+  font-size: 90%;
   font-weight: lighter;
-  width: 490px;
-  padding-left: 35px;
+  width: 49%;
+  padding-left: 3.5%;
 }
+
 
 .orange{
   background-color: #FF9300;
@@ -84,17 +88,19 @@ body{
 .blocTwo{
   display: flex;
   flex-direction: column;
-  width:300px;
+  justify-content: center;
+  margin-top:11%;
+  width:30%;
 }
 
 form.formContainer{
-  margin-left: 50px;
+  margin-left: 10%;
 }
 
 select#subject{
-  height: 15px;
+  height: 1.5%;
   background:#F2F2F2;
-  width:200px;
+  width:40%;
   background-color: white;
   border: solid #707070 thin;
   }
@@ -102,50 +108,48 @@ select#subject{
 
 input{
   border: solid #707070 thin;
-  border-radius: 5px;
-  height: 18px;
-  margin-left: 60px;
-  justify-content: center;
-  width: 200px;
-  padding-right:20px;
+  border-radius: 5%;
+  height: 1.8%;
+  width:200%;
 }
 
 section.background{
-  margin-top:30px;
-  width:500px;
-  height:600px;
+  margin-top:-10%;
+  width:170%;
+  height:300%;
   background-color: #f2f2f2;
   border-radius: 5%;
   display:flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 
 section.item{
   display:flex;
-  margin:10px;
-  width:500px;
+  margin:3%;
+  width:100%;
 }
 
 label{
-  width:200px;;
+  width:50%;;
 }
 
 /*first Flexbox*/
 section.firstFlexobx{
-  padding-top: 15px;
+  padding-top: 1.5%;
 }
 
 /*second Flexbox*/
 
 section.secondFlexbox{
-  padding-top:5px;
+  padding-top:0.5%;
 }
 
 
 /*third flexbox*/
 section.thirdFlexbox{
-  padding-top:5px;
+  padding-top:0.5%;
 }
 
 .book{
@@ -154,12 +158,12 @@ section.thirdFlexbox{
 }
 
 .resto input{
-  margin:10px;
+  margin:1%;
 }
 
 .choice{
 justify-content: space-between;
-margin-top:7px;
+margin-top:2%;
 }
 
 .restoChoice{
@@ -174,10 +178,10 @@ margin-top:7px;
 .choiceContainer {
   display: flex;
   position: relative;
-  padding-left: 17px;
-  margin-bottom: 12px;
+  padding-left: 5%;
+  margin-bottom: 3%;
   cursor: pointer;
-  font-size: 0.7rem;
+  font-size:70%;
   color: #707070;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -199,10 +203,14 @@ margin-top:7px;
   position: absolute;
   top: 0;
   left: 0;
-  height: 13px;
-  width: 13px;
+  height: 90%;
+  width: 5.8%;
   background-color: white;
   border-color:#707070;
+}
+
+.secondChoices .checkmark{
+  width: 9%;
 }
 
 /* On mouse-over, add a grey background color */
@@ -229,10 +237,10 @@ margin-top:7px;
 
 /* Style the checkmark/indicator */
 .choiceContainer .checkmark:after {
-  left: 4.5px;
-  top: 1px;
-  width: 3px;
-  height: 8px;
+  left: 30%;
+  top: 4%;
+  width: 25%;
+  height: 60%;
   border: solid white;
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
@@ -242,7 +250,7 @@ margin-top:7px;
 /*Fourth Flexbox*/
 section.fourthFlexbox{
   display:flex;
-  margin-bottom: 30px;
+  margin-bottom: 10%;
 }
 
 .message{
@@ -252,37 +260,170 @@ section.fourthFlexbox{
 }
 
 .writeHere{
-  width:350px;
+  width:90%;
 }
 
 
 /*Réserver*/
 .booking{
   display: flex;
-  margin-top : 10px;
-  margin-bottom: 20px;
-  width:520px;
+  justify-content: center;
+  margin-top : 3%;
+  margin-bottom: 20%;
+  margin-left: 60%;
+  width:50%;
 }
 
 .bookingButton{
   background-color: #FF9300;
   color:white;
   border-color:#FF9300;
-  padding: 5px;
-  width:150px;
-  height: 300px:
-  font-size:0.8rem;
+  padding: 0.5%;
+  width:150%;
+  height: 500%;
+  font-size:100%;
   text-transform: uppercase;
 }
 
-@media screen (min-width:960) and (max-width:1280px){
+@media screen and (max-width:1500px){
+}
+
+.title{
+  font-size: 120%;
+}
+
+.smallText{
+  font-size: 100%;
+}
+
+@media screen and (max-width:1050px){
+}
 
 body{
-  font-size:0.8rem;
+  font-size: 70%;
 }
 
+.blocOne{
+  margin-left: 0%;
 }
 
+.arrow img{
+  margin-left:1400%;
+  margin-bottom: -700%;
+  height:600%;
+}
+
+.text{
+  margin-left: 5%;
+  margin-top: 80%;
+}
+
+.title{
+  font-size: 150%;
+  width: 30%;
+}
+
+.textTitle{
+  margin-top: 4.5%;
+  margin-left: 1%;
+  /*border-left-color: #FF9300;*/
+}
+
+.smallText{
+  font-size: 100%;
+  width: 35%;
+  margin-left:2%;
+}
+
+.orange{
+  margin-top: 12px;
+}
+
+.title{
+  font-size: 130%;
+}
+
+section.background{
+  margin-top:-15%;
+  height: 200%;
+}
+
+form.formContainer{
+  margin-left: 6%;
+  margin-bottom: -8%;
+}
+
+select#subject{
+  background:#F2F2F2;
+  width:40%;
+  font-size:70%;
+  background-color: white;
+  border: solid #707070 thin;
+}
+
+
+label{
+  width:40%;
+}
+
+input{
+  width:40%;
+}
+
+section.secondFlexbox{
+  padding-top:0.005%;
+}
+
+section.thirdFlexbox{
+  padding-top:0.005%;
+  margin-bottom: 0%;
+}
+
+.secondChoices{
+  height:50%;
+}
+
+.choiceContainer{
+  margin-bottom:0%;
+  padding-bottom: 0.3%;
+}
+
+.secondChoices .checkmark{
+  width: 8%;
+}
+
+section.message{
+  padding-top:-1%;
+  width:90%;
+}
+
+.booking{
+  height: 1%;
+  margin-left: 65%;
+}
+
+
+@media screen and (max-width:768px){
+}
+
+.sent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20%;
+  font-size: 250%;
+  font-family: "CaviarDreams" "helvetica";
+  color: white;
+}
+
+.backToMain{
+  color:white;
+  text-decoration: none;
+  background-color: #FF9300;
+  font-size: 50%;
+  margin:1%;
+  padding: 1%;
+  text-transform: uppercase;
+}
 /*FIN FORMULAIRE BOOK*/
-
-/*Footer*/
