--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -7,13 +7,15 @@ body{
   background-image:url(../images/hall/hallDAaccueil.jpg);
   background-repeat: no-repeat;
   background-attachment:fixed;
-  background-position:50% 50%;
-  background-size: auto;
+  background-position:100%;
+  background-size: 100%;
   font-family: "Avenir", sans-serif;
-  font-size: 0.8rem;
+  font-size: 100%;
   font-weight: 500;
-  wwidth:100%;
+  width:100%;
+  height:100%;
 }
+
 .column{
   display:flex;
   flex-direction: column;
@@ -30,43 +32,48 @@ body{
 
 .blocOne{
   flex-direction: column;
-  margin-left: 20px;
-  width: 200px;
-  margin-bottom: 300px;
+  margin-left: 2%;
+  width: 20%;
+  margin-bottom: 30%;
 }
 
 .arrow{
-  width:200px;
+  width:20%;
   height:auto;
   color: white;
 }
 
 .arrow img{
-  margin-left:600px;
-  margin-bottom:-100px;
+  margin-left:1500%;
+  margin-bottom: -250%;
 }
+
 
 .text{
   flex-direction: column;
   color: white;
-  margin-left: 20px;
+  margin-left: 10%;
 }
 
 .title{
-  margin-left: 10px;
-  font-size: 1.3rem;
-  width: 400px;
+  margin-left: 2%;
+  font-size: 150%;
+  width: 40%;
 }
+
 .textTitle{
   font-family: 'CaviarDreams';
-  margin-top: 20px;
+  margin-top:6%;
+  /*border-left-color: #FF9300;*/
 }
 
 .smallText{
-  font-size: 0.8rem;
+  font-size: 90%;
   font-weight: lighter;
-  width: 400px;
+  width: 49%;
+  padding-left: 3.5%;
 }
+
 
 .orange{
   background-color: #FF9300;
@@ -82,18 +89,18 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width:300px;
-  margin-top: 0px;
+  margin-top:11%;
+  width:30%;
 }
 
 form.formContainer{
-  margin-left: 50px;
+  margin-left: 10%;
 }
 
 select#subject{
-  height: 15px;
+  height: 1.5%;
   background:#F2F2F2;
-  width:200px;
+  width:40%;
   background-color: white;
   border: solid #707070 thin;
   }
@@ -101,15 +108,15 @@ select#subject{
 
 input{
   border: solid #707070 thin;
-  border-radius: 5px;
-  height: 18px;
-  margin-left: 60px;
-  justify-content: center;
+  border-radius: 5%;
+  height: 1.8%;
+  width:200%;
 }
 
 section.background{
-  width:500px;
-  height:400px;
+  margin-top:-10%;
+  width:170%;
+  height:300%;
   background-color: #f2f2f2;
   border-radius: 5%;
   display:flex;
@@ -118,32 +125,132 @@ section.background{
 }
 
 
-.item{
+section.item{
   display:flex;
-  margin:10px;
-  margin-bottom: 10px;
-  width:500px;
+  margin:3%;
+  width:100%;
 }
 
 label{
-  width:180px;
+  width:50%;;
 }
 
 /*first Flexbox*/
 section.firstFlexobx{
-  padding-top: 15px;
+  padding-top: 1.5%;
 }
 
 /*second Flexbox*/
+
 section.secondFlexbox{
-  padding-top: 15px;
+  padding-top:0.5%;
 }
 
+
+/*third flexbox*/
+section.thirdFlexbox{
+  padding-top:0.5%;
+}
+
+.book{
+  display:flex;
+  flex-direction:column;
+}
+
+.resto input{
+  margin:1%;
+}
+
+.choice{
+justify-content: space-between;
+margin-top:2%;
+}
+
+.restoChoice{
+  display:flex;
+}
+
+.secondChoices{
+  display: flex;
+}
+
+/* Customize the label (the container) */
+.choiceContainer {
+  display: flex;
+  position: relative;
+  padding-left: 5%;
+  margin-bottom: 3%;
+  cursor: pointer;
+  font-size:70%;
+  color: #707070;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.choiceContainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90%;
+  width: 5.8%;
+  background-color: white;
+  border-color:#707070;
+}
+
+.secondChoices .checkmark{
+  width: 9%;
+}
+
+/* On mouse-over, add a grey background color */
+.choiceContainer:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.choiceContainer input:checked ~ .checkmark {
+  background-color: #FF9300;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.choiceContainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.choiceContainer .checkmark:after {
+  left: 30%;
+  top: 4%;
+  width: 25%;
+  height: 60%;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 /*Fourth Flexbox*/
 section.fourthFlexbox{
-  padding-top: 15px;
   display:flex;
-  margin-bottom: 30px;
+  margin-bottom: 10%;
 }
 
 .message{
@@ -152,41 +259,171 @@ section.fourthFlexbox{
   justify-content: center;
 }
 
-.message{
-  justify-content: center;
-}
 .writeHere{
-  width:350px;
+  width:90%;
 }
 
 
 /*Réserver*/
 .booking{
   display: flex;
-  margin-top : 20px;
-  margin-bottom: 20px;
-  width:520px;
+  justify-content: center;
+  margin-top : 3%;
+  margin-bottom: 20%;
+  margin-left: 60%;
+  width:50%;
 }
 
 .bookingButton{
   background-color: #FF9300;
   color:white;
   border-color:#FF9300;
-  padding: 5px;
-  width:150px;
-  height: 300px:
-  font-size:0.8rem;
+  padding: 0.5%;
+  width:150%;
+  height: 500%;
+  font-size:100%;
   text-transform: uppercase;
 }
 
-@media screen (min-width:960) and (max-width:1280px){
+@media screen and (max-width:1500px){
+}
+
+.title{
+  font-size: 120%;
+}
+
+.smallText{
+  font-size: 100%;
+}
+
+@media screen and (max-width:1050px){
+}
 
 body{
-  font-size:0.8rem;
+  font-size: 70%;
 }
 
+.blocOne{
+  margin-left: 0%;
 }
 
+.arrow img{
+  margin-left:1400%;
+  margin-bottom: -700%;
+  height:600%;
+}
+
+.text{
+  margin-left: 5%;
+  margin-top: 80%;
+}
+
+.title{
+  font-size: 150%;
+  width: 30%;
+}
+
+.textTitle{
+  margin-top: 4.5%;
+  margin-left: 1%;
+  /*border-left-color: #FF9300;*/
+}
+
+.smallText{
+  font-size: 100%;
+  width: 35%;
+  margin-left:2%;
+}
+
+.orange{
+  margin-top: 12px;
+}
+
+.title{
+  font-size: 130%;
+}
+
+section.background{
+  margin-top:-15%;
+  height: 90%;
+}
+
+form.formContainer{
+  margin-left: 6%;
+  margin-bottom: -8%;
+}
+
+select#subject{
+  background:#F2F2F2;
+  width:40%;
+  font-size:70%;
+  background-color: white;
+  border: solid #707070 thin;
+}
+
+
+label{
+  width:40%;
+}
+
+input{
+  width:40%;
+}
+
+section.secondFlexbox{
+  padding-top:0.005%;
+}
+
+section.thirdFlexbox{
+  padding-top:0.005%;
+  margin-bottom: 0%;
+}
+
+.secondChoices{
+  height:50%;
+}
+
+.choiceContainer{
+  margin-bottom:0%;
+  padding-bottom: 0.3%;
+}
+
+.secondChoices .checkmark{
+  width: 8%;
+}
+
+section.message{
+  padding-top:-1%;
+  width:90%;
+}
+
+.booking{
+  height: 1%;
+  margin-left: 65%;
+}
+
+
+@media screen and (max-width:768px){
+}
+
+.sent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20%;
+  font-size: 250%;
+  font-family: "CaviarDreams" "helvetica";
+  color: white;
+}
+
+.backToMain{
+  color:white;
+  text-decoration: none;
+  background-color: #FF9300;
+  font-size: 50%;
+  margin:1%;
+  padding: 1%;
+  text-transform: uppercase;
+}
 /*FIN FORMULAIRE BOOK*/
-
-/*Footer*/
