--- a/styles/legalnotice.css
+++ b/styles/legalnotice.css
@@ -3,6 +3,11 @@
   width: 1024px;
   display: flex;
   flex-direction: column;
+  padding: 10px;
+}
+
+main.container{
+  padding-top: 100px;
 }
 
 .blocDiv{
@@ -10,6 +15,9 @@
 }
 
 h1{
-  font-size: 50%;
+  font-size: 150%;
   color: #FF9300;
+  font-family: 'CaviarDreams';
+  text-transform: uppercase;
+  text-align: center;
 }
