--- a/styles/card.css
+++ b/styles/card.css
@@ -8,7 +8,6 @@
   src: url('../fonts/CaviarDreams.ttf');
 }
 
-
 *{
     margin: 0px;
     padding: 0px;
@@ -239,10 +238,7 @@ body{
   font-family: 'Caviar Dreams';
   color: #444
 }
-@font-face {
-  font-family: 'Caviar Dreams';
-  src: url('../fonts/CaviarDreams.ttf');
-}
+
 
 /**** CARD ****/
 
@@ -450,7 +446,7 @@ img.cinema{
   z-index: -1;
 }
 
-img.logo{
+.logoCine{
   z-index: 4;
   width: 15%;
   height: 5%;
@@ -566,4 +562,86 @@ footer ul{
 
 footer h2{
     font-size: 20px;
+}
+
+@media screen and (max-width:1500px){
+  .cinema h2{
+    font-size: 49px;
+  }
+  .cinema p{
+    font-size: 28px;
+    padding-right: 14%;
+  }
+  .cinema>img{
+    height: 360px;
+  }
+  .logoCine{
+    width: 20%;
+    height: 100px;
+    margin-left: 8%;
+    margin-top: 11%;
+  }
+}
+
+@media screen and (max-width:1050px){
+  .cinema h2{
+    font-size: 38px;
+  }
+  .cinema p{
+    font-size: 25px;
+    padding-right: 9%;
+  }
+  .cinema>img{
+    height: 360px;
+  }
+  .logoCine{
+    width: 20%;
+    height: 100px;
+    margin-left: 8%;
+    margin-top: 11%;
+  }
+}
+
+@media screen and (max-width:768px){
+  .container-home{
+    width: 670px;
+  }
+  div.grey-background{
+    height: 140px;
+  }
+  div.presentation{
+    margin-bottom: -220px;
+  }
+  .cinema>img{
+    height: 320px;
+  }
+  .logoCine{
+    width: 30%;
+    margin-left: 4%;
+    margin-top: 24%;
+  }
+  .cineText{
+    position: absolute;
+    margin-left: 12%;
+  }
+  .cinema h2{
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+  }
+  .cinema p{
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 8%;
+  }
+  .cinema a{
+    margin-right: 5%;
+    font-size: 25px;
+  }
+  .fb{
+    margin-left: 14%;
+  }
+  .button2{
+    width: 25%;
+  }
 }
